--- a/translations/kangyur/placeholders/096-011_toh762-the_incantation_of_lohatunda.xml
+++ b/translations/kangyur/placeholders/096-011_toh762-the_incantation_of_lohatunda.xml
@@ -14,11 +14,11 @@
                 <editor role="projectEditor" xml:id="UT22084-096-011-11">Torsten Gerloff</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-096-011"/>
             </publicationStmt>
             <sourceDesc>
@@ -60,6 +60,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-16T14:24:46.899Z" type="text-version" status="0.0.5" xml:id="UT22084-096-011-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-17T13:38:48.454Z" type="translation-status" status="2.e" xml:id="UT22084-096-011-15">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-17T13:38:48.454Z" type="text-version" status="0.0.6" xml:id="UT22084-096-011-16">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
