--- a/translations/kangyur/translations/001-002_toh1-2-chapter_2_on_the_restoration_site.xml
+++ b/translations/kangyur/translations/001-002_toh1-2-chapter_2_on_the_restoration_site.xml
@@ -26,9 +26,10 @@
                 <editor role="projectEditor" xml:id="UT22084-001-002-68">John Canti</editor>
                 <editor role="TEImarkupEditor" xml:id="UT22084-001-002-81">Sameer Dhingra</editor>
                 <editor role="finalReviewer" xml:id="UT22084-001-002-2044">John Canti</editor>
+                <sponsor xml:id="UT22084-001-002-17987">Dakki</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -162,6 +163,12 @@
                 </change>
                 <change who="#john" when="2024-10-18T10:58:10.021Z" type="text-version" status="1.0.0" xml:id="UT22084-001-002-17986">
                     <desc>User set version to 1.0.0</desc>
+                </change>
+                <change who="#john" when="2024-10-18T11:06:54.574Z" type="text-version" status="1.0.1" xml:id="UT22084-001-002-17988">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#celso" when="2024-10-18T13:26:50.24Z" type="text-version" status="1.0.2" xml:id="UT22084-001-002-17989">
+                    <desc>Removed stray milestone</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -1198,7 +1205,6 @@
                             Rājagṛha. Understanding the Blessed One’s silence to be consent, the great number of lay vow holders from Rājagṛha praised
                             and rejoiced in the Blessed One’s proclamation before taking their leave from his presence. <ref cRef="F.132.a" type="folio" xml:id="UT22084-001-002-1846"/>
                         </p>
-                        <milestone unit="chunk" xml:id="UT22084-001-002-267"/>
                     </div>
                     <div type="chapter" xml:id="UT22084-001-002-section-1-4">
                         <head type="chapter" tid="122">Seated Practice</head>
