--- a/translations/kangyur/translations/001-002_toh1-2-chapter_2_on_the_restoration_site.xml
+++ b/translations/kangyur/translations/001-002_toh1-2-chapter_2_on_the_restoration_site.xml
@@ -29,7 +29,7 @@
                 <sponsor xml:id="UT22084-001-002-17987">Dakki</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.2 <date>2024</date>
+                <edition>v 1.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -169,6 +169,9 @@
                 </change>
                 <change who="#celso" when="2024-10-18T13:26:50.24Z" type="text-version" status="1.0.2" xml:id="UT22084-001-002-17989">
                     <desc>Removed stray milestone</desc>
+                </change>
+                <change who="#john" when="2024-10-19T08:42:27.385Z" type="text-version" status="1.0.3" xml:id="UT22084-001-002-17990">
+                    <desc>Corrections to one note.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -500,13 +503,14 @@
                         <div type="section" xml:id="UT22084-001-002-introduction-2-2-1">
                             <head type="section" tid="38">The Prātimokṣa Sūtra</head>
                             <milestone unit="chunk" xml:id="UT22084-001-002-141"/>
-                            <p tid="39">The commentator Ācārya Śūra<note place="end" xml:id="UT22084-001-002-142"> Butön Rinchen Drup (1290–1364) and
-                                    Tshalpa Kunga Dorjé (1309–64) both attribute the authorship of <title xml:lang="en">The Guide to The Prātimokṣa
+                            <p tid="39">The commentator Ācārya Śūra<note place="end" xml:id="UT22084-001-002-142">In their respective catalogs 
+                                    that include the titles of the <foreign xml:lang="Sa-Ltn" type="term">śāstras</foreign> 
+                                    available to the authors in fourteenth-century central Tibet, Butön Rinchen Drup (1290–1364) and
+                                    Tshalpa Mönlam Dorjé (1284–1347) both attribute the authorship of <title xml:lang="en">The Guide to The Prātimokṣa
                                         Sūtra</title> (<ref rend="pending" target="https://read.84000.co/translation/toh4104.html">Toh 4104</ref>) to
-                                    Lopön Pawo (Tib. slob dpon dpa bo) or Ācārya Śūra, a.k.a. Aśvaghoṣa (Tib. rta dbyangs). See Butön’s <title xml:lang="Bo-Ltn">bstan ’gyur gyi dkar chag yid bzhin nor bu dbang gi rgyal po’i phreng ba</title>, F.105.b,
-                                    and <title xml:lang="Bo-Ltn">bstan ’gyur gyi dkar chag (sna tshogs) nor bu’i phung po</title>, a catalog on
-                                    which the “Old” Narthang Tengyur was based but that includes the titles of other <foreign xml:lang="Sa-Ltn" type="term">śāstras</foreign> 
-                                    available to the author in fourteenth-century central Tibet. It is not clear which of the two
+                                    Lopön Pawo (Tib. slob dpon dpa bo) or Ācārya Śūra, a.k.a. Aśvaghoṣa (Tib. rta dbyangs). See Butön’s 
+                                <title xml:lang="Bo-Ltn">bstan ’gyur gyi dkar chag yid bzhin nor bu dbang gi rgyal po’i phreng ba</title>, F.105.b,
+                                    and <title xml:lang="Bo-Ltn">bstan ’gyur gyi dkar chag (sna tshogs) nor bu’i phung po</title>. It is not clear which of the two
                                     Indian Buddhist authors named Aśvaghoṣa authored the Vinaya commentaries. The ca. second <hi rend="small-caps">ce</hi> poet Aśvaghoṣa is remembered as the author of two long verse masterpieces, the <title xml:lang="Sa-Ltn">Buddhacarita</title> and the <title xml:lang="Sa-Ltn">Saundarananda</title>, 
                                     hailed as early exemplars of the kāvya style. The second Aśvaghoṣa wrote a manual on guru devotion (Skt. <title xml:lang="Sa-Ltn">Gurupañcāśikā</title>; Tib. <title xml:lang="Bo-Ltn">bla ma lnga bcu pa</title>). Śūra’s
                                         <title xml:lang="en">Guide to The Prātimokṣa Sūtra</title> (<ref rend="pending" target="https://read.84000.co/translation/toh4104.html">Toh 4104</ref>) glosses <term rend="ignore">key</term>
