--- a/translations/kangyur/placeholders/072-018_toh318-the_dharma_discourse_on_the_vast_meaning.xml
+++ b/translations/kangyur/placeholders/072-018_toh318-the_dharma_discourse_on_the_vast_meaning.xml
@@ -20,11 +20,11 @@
                 <editor role="copyEditor" xml:id="UT22084-072-018-41">Dawn Collins</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.15 <date>2024</date>
+                <edition>v 0.0.16 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-072-018"/>
                 <date/>
             </publicationStmt>
@@ -105,6 +105,12 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-30T11:41:28.985Z" type="text-version" status="0.0.15" xml:id="UT22084-072-018-46">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-21T09:43:12.933Z" type="translation-status" status="2.g" xml:id="UT22084-072-018-47">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-21T09:43:12.933Z" type="text-version" status="0.0.16" xml:id="UT22084-072-018-48">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
