--- a/translations/kangyur/placeholders/076-004_toh350-the_history_of_kanakavarna.xml
+++ b/translations/kangyur/placeholders/076-004_toh350-the_history_of_kanakavarna.xml
@@ -20,12 +20,12 @@
                 <editor role="copyEditor" xml:id="UT22084-076-004-34">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-076-004"/>
                 <date/>
             </publicationStmt>
@@ -73,6 +73,12 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-05T12:29:03.87Z" type="text-version" status="0.0.5" xml:id="UT22084-076-004-37">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-22T10:05:49.575Z" type="translation-status" status="2.b" xml:id="UT22084-076-004-38">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-22T10:05:49.575Z" type="text-version" status="0.0.6" xml:id="UT22084-076-004-39">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
