--- a/translations/kangyur/placeholders/065-005_toh242-the_sutra_of_the_wheel_of_dedication.xml
+++ b/translations/kangyur/placeholders/065-005_toh242-the_sutra_of_the_wheel_of_dedication.xml
@@ -22,11 +22,11 @@
                 <editor role="reviser" xml:id="UT22084-065-005-9">Joshua Shelton</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-065-005"/>
                 <date/>
             </publicationStmt>
@@ -70,6 +70,12 @@
                     <desc>2.h</desc>
                 </change>
                 <change who="#line-tofte" when="2024-03-20T13:48:17.954Z" type="text-version" status="0.0.6" xml:id="UT22084-065-005-20">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-22T10:12:39.8Z" type="translation-status" status="2.g" xml:id="UT22084-065-005-21">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-22T10:12:39.8Z" type="text-version" status="0.0.7" xml:id="UT22084-065-005-22">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
