--- a/translations/kangyur/translations/089-012_toh555-the_sutra_of_the_sublime_golden_light_1.xml
+++ b/translations/kangyur/translations/089-012_toh555-the_sutra_of_the_sublime_golden_light_1.xml
@@ -38,7 +38,7 @@
                 <sponsor xml:id="UT22084-089-012-4103">Zhang Dada</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.2.2 <date>2024</date>
+                <edition>v 1.2.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -256,6 +256,9 @@
                 </change>
                 <change who="#sameer" when="2024-10-17T16:15:59.499Z" type="text-version" status="1.2.2" xml:id="UT22084-089-012-4183">
                     <desc>Added a paragraph to the summary</desc>
+                </change>
+                <change who="#celso" when="2024-10-22T16:01:13.467Z" type="text-version" status="1.2.3" xml:id="UT22084-089-012-4184">
+                    <desc>corrected term bhikṣuṇī</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -4167,7 +4170,7 @@
                     <p tid="609">“Noble one, this extremely excellent <title xml:lang="en">Sūtra of the Sublime Golden Light</title> benefits in
                         various ways and increases in various ways the good roots of bodhisattvas and purifies them of karmic obscurations. </p>
                     <milestone unit="chunk" xml:id="UT22084-089-012-1021"/>
-                    <p tid="610">“Noble one, in whatever land bhikṣus, bhikṣunīs, upāsakas, and upāsikās teach to others this excellent <title xml:lang="en">Sūtra of the Sublime Golden Light</title>, that land will obtain four kinds of benefit.<note place="end" xml:id="UT22084-089-012-1022"> YJ has <foreign xml:lang="zh" type="quote">福利善根</foreign> (“benefits and roots of
+                    <p tid="610">“Noble one, in whatever land bhikṣus, bhikṣuṇīs, upāsakas, and upāsikās teach to others this excellent <title xml:lang="en">Sūtra of the Sublime Golden Light</title>, that land will obtain four kinds of benefit.<note place="end" xml:id="UT22084-089-012-1022"> YJ has <foreign xml:lang="zh" type="quote">福利善根</foreign> (“benefits and roots of
                             goodness”), while BG has <foreign xml:lang="zh" type="quote">功德善根</foreign> (“merits and roots of goodness”).</note> What
                         are those four? <ref cRef="F.59.b" type="folio" xml:id="UT22084-089-012-3334"/> They are as follows: (1) the king of that land
                         will have no illness<note place="end" xml:id="UT22084-089-012-1023"> BG adds <foreign xml:lang="zh" type="term">惱</foreign>
@@ -4980,7 +4983,7 @@
                     <p tid="753">When this Dharma teaching was given, three thousand million<note place="end" xml:id="UT22084-089-012-1305"> Literally
                             “a hundred thousand times thirty thousand.” Toh 556 has just “three thousand.” YJ and BG match Toh 555.</note>
                         bodhisattvas attained patience of the quality of birthlessness; innumerable bodhisattvas attained the irreversible
-                        enlightenment mind; innumerable, <ref cRef="F.72.a" type="folio" xml:id="UT22084-089-012-3359"/> endless bhikṣus and bhikṣunīs
+                        enlightenment mind; innumerable, <ref cRef="F.72.a" type="folio" xml:id="UT22084-089-012-3359"/> endless bhikṣus and bhikṣuṇīs
                         attained the pure Dharma eyes regarding phenomena; and innumerable beings developed the enlightenment mind.</p>
                     <milestone unit="chunk" xml:id="UT22084-089-012-1306"/>
                     <p tid="754">Then, at that time, the Bhagavat spoke this verse:</p>
@@ -6376,7 +6379,7 @@
                             sūtra”).</note> all of us Four Mahārājas will single-mindedly guard that human king and all the humans of that land so
                         that they will be freed of calamities and always be established in happiness.</p>
                     <milestone unit="chunk" xml:id="UT22084-089-012-1688"/>
-                    <p tid="964">“Bhagavat, if there is a bhikṣu, bhikṣunī, upāsaka, or upāsikā who possesses this sūtra,<note place="end" xml:id="UT22084-089-012-1689"> The last half of this paragraph and the first half of the next is absent in Sanskrit,
+                    <p tid="964">“Bhagavat, if there is a bhikṣu, bhikṣuṇī, upāsaka, or upāsikā who possesses this sūtra,<note place="end" xml:id="UT22084-089-012-1689"> The last half of this paragraph and the first half of the next is absent in Sanskrit,
                             presumably as a result of a scribal omission because of the repetitive nature of the sentences. All three versions of the
                             Chinese match Toh 555.</note> and if at that time a human king should seek them out, and without reluctance make offerings
                         to them, then we Four Mahārājas will bring happiness to that ruler of the land and all the people in that land and will banish
@@ -6422,7 +6425,7 @@
                     <p tid="975">“Therefore, when you Four Mahārājas and also your deva followers and the yakṣas <ref cRef="F.86.a" type="folio" xml:id="UT22084-089-012-3387"/> battle with the asuras, you will always attain the benefits of victory.</p>
                     <milestone unit="chunk" xml:id="UT22084-089-012-1703"/>
                     <p tid="976">“If you guard and possess this sūtra, then through the power of this sūtra many sufferings, attacks from enemies,
-                        famine, illness, and disease will all cease and be dispelled. Therefore, if you see the four kinds of followers<note place="end" xml:id="UT22084-089-012-1704"> Toh 556 and 557 specify that this is “the bhikṣus, bhikṣunīs, upāsakas, and
+                        famine, illness, and disease will all cease and be dispelled. Therefore, if you see the four kinds of followers<note place="end" xml:id="UT22084-089-012-1704"> Toh 556 and 557 specify that this is “the bhikṣus, bhikṣuṇīs, upāsakas, and
                             upāsikās.” The Chinese is the same as Toh 555: BG and TWC have <foreign xml:lang="zh" type="quote">四部之眾</foreign>. YJ
                             abbreviates this as <foreign xml:lang="zh" type="quote">四眾</foreign>.</note> obtaining this king of sūtras, possessing it,
                         reading it, and reciting it, then with a diligent mind you should guard them, dispel all harm, and bring them happiness.”</p>
@@ -6581,7 +6584,7 @@
                         and cause harm and there will be no misery or illness.’ </p>
                     <milestone unit="chunk" xml:id="UT22084-089-012-1736"/>
                     <p tid="997">“Mahārājas, know this: When at that time those kings in that way revere and venerate the true Dharma and make
-                        offerings to, honor, venerate, and praise the bhikṣus, bhikṣunīs, upāsakas, and upāsikās who possess this sublime sūtra, if
+                        offerings to, honor, venerate, and praise the bhikṣus, bhikṣuṇīs, upāsakas, and upāsikās who possess this sublime sūtra, if
                         they first dedicate the roots of merit and supreme merit that come from that solely to you and your followers, then those
                         human kings will possess the great merit of good karma as a cause and condition, and in that life they will attain great power
                         and their magnificence will increase. They will be adorned by splendor and supreme features, and all their adversaries will be
@@ -7713,10 +7716,10 @@
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-089-012-2045"/>
                     <p tid="1152">Then<note place="end" xml:id="UT22084-089-012-2046"> YJ adds <foreign xml:lang="zh" type="quote">大辯才天女說洗浴法壇場呪已</foreign> (“having said the mantra of the maṇḍala of cleansing”).</note> the great goddess Sarasvatī
-                        bowed down to the Bhagavat’s feet and said to the Bhagavat, “Bhagavat, any bhikṣu, bhikṣunī, upāsaka, or upāsikā who acquires,
+                        bowed down to the Bhagavat’s feet and said to the Bhagavat, “Bhagavat, any bhikṣu, bhikṣuṇī, upāsaka, or upāsikā who acquires,
                         possesses, reads, recites, writes out, and practices<note place="end" xml:id="UT22084-089-012-2047"> Rather than “practices,”
                             YJ has <foreign xml:lang="zh" type="term">流布</foreign> (“promulgate”).</note> the teaching of this sublime king of sūtras,
-                        and wherever that bhikṣu or bhikṣunī dwells—a town, a town’s environs, a wilderness, a mountain, or a forest—for their sake I
+                        and wherever that bhikṣu or bhikṣuṇī dwells—a town, a town’s environs, a wilderness, a mountain, or a forest—for their sake I
                         and my entourage will come to them as a divine entourage,<note place="end" xml:id="UT22084-089-012-2048"> Here YJ has <foreign xml:lang="zh" type="quote">我為是人將諸眷屬作天伎樂，來詣其所</foreign> (“I will let my entourage create divine music. My entourage
                             will come to wherever they are”).</note> will guard and defend them, and will dispel the suffering of illness, the falling
                         of shooting stars, bad omens, diseases, fighting, and quarreling. I will put an end to being arrested by the king’s law, bad
@@ -8554,7 +8557,7 @@
                         <note place="end" xml:id="UT22084-089-012-2238"> BG and TWC have <foreign xml:lang="zh">功德天</foreign>, which usually
                             translates as Lakṣmī. YJ has the alternative translation <foreign xml:lang="zh">大吉祥</foreign>, which matches Toh 555 in
                             translating as “the great goddess Śrī.”</note> Then the great goddess Śrī rose from her seat, bowed down to the Bhagavat’s
-                        feet, reverently placed her palms together, and said to the Bhagavat, “Bhagavat, if I see any bhikṣu, bhikṣunī, upāsaka, or
+                        feet, reverently placed her palms together, and said to the Bhagavat, “Bhagavat, if I see any bhikṣu, bhikṣuṇī, upāsaka, or
                         upāsikā who obtains, keeps, reads, recites, and teaches others this <title xml:lang="en">Supremely Victorious King of Sūtras,
                             the Sublime Golden Light</title>, I will single-mindedly, reverentially honor them and make offerings to them. For such a
                         dharmabhāṇaka there will be provided a perfection of food, drink, clothing, bedding, medicine while ill, and any requisite
@@ -12839,7 +12842,7 @@
                         you will attain all the merit that can be, which could not be fully described even in as many eons as there are grains of sand
                         in the Ganges River.</p>
                     <milestone unit="chunk" xml:id="UT22084-089-012-3172"/>
-                    <p tid="1929">“Any bhikṣu or bhikṣunī, upāsaka or upāsikā, and moreover any noble man or noble woman, and so on, who makes
+                    <p tid="1929">“Any bhikṣu or bhikṣuṇī, upāsaka or upāsikā, and moreover any noble man or noble woman, and so on, who makes
                         offerings to, honors, writes out, widely promulgates, or teaches this sūtra correctly to others will obtain such merit as
                         that.</p>
                     <p tid="1930">“Therefore, you should meditate on this practice with diligence.”</p>
@@ -13105,7 +13108,7 @@
                     <bibl xml:id="UT22084-089-012-3237">Bagchi, S., ed. <title xml:lang="Sa-Ltn">Suvarṇa­prabhāsasūtram</title>. Darbhanga: The
                         Mithila Institute, 1967. Digital Sanskrit Buddhist Canon. </bibl>
                     <bibl xml:id="UT22084-089-012-3238">Banerjee, Radha. <title xml:lang="Sa-Ltn">Suvarṇa­prabhāsottama­sūtra</title>. London: British
-                        Library, 2006.http://idp.bl.uk/downloads/GoldenLight.pdf.</bibl>
+                        Library, 2006. <ref target="http://idp.bl.uk/downloads/GoldenLight.pdf">http://idp.bl.uk/downloads/GoldenLight.pdf</ref>.</bibl>
                     <bibl xml:id="UT22084-089-012-3239">Buswell Jr., Robert E., and Donald Lopez Jr. <title xml:lang="en">The Princeton Dictionary of
                             Buddhism</title>. Princeton University Press, 2014.</bibl>
                     <bibl xml:id="UT22084-089-012-3240">Di, Guan. “The Sanskrit Fragments Preserved in Arthur M. Sackler Museum of Peking University.”
@@ -13510,8 +13513,8 @@
                     </item>
                     <item>
                         <gloss xml:id="UT22084-089-012-3542" type="term" mode="match">
-                            <term type="translationMain">bhikṣunī</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">bhikṣunī</term>
+                            <term type="translationMain">bhikṣuṇī</term>
+                            <term xml:lang="Sa-Ltn" type="attestedDictionary">bhikṣuṇī</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">dge slong ma</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">དགེ་སློང་མ།</term>
                             <term xml:lang="zh" type="attestedSource">苾芻尼</term>
@@ -15919,7 +15922,7 @@
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">ma dros pa</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">མ་དྲོས་པ།</term>
                             <term xml:lang="zh" type="attestedSource">阿那婆答多</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The nāga king who is said to dwell in Lake Mansarovar near Mount Kailash.</p>
                             </note>
                         </gloss>
@@ -17458,7 +17461,7 @@
                             <term xml:lang="zh" type="attestedSource">大世主</term>
                             <note type="definition">
                                 <p>The Buddha’s mother’s sister and his stepmother. She was also the mother of Nanda, whom the Buddha later inspired
-                                    to become a monk, as recorded in two sūtras bearing his name and elsewhere. She became the first bhikṣunī after
+                                    to become a monk, as recorded in two sūtras bearing his name and elsewhere. She became the first bhikṣuṇī after
                                     the death of the Buddha’s father.</p>
                             </note>
                             <!--<term type="alternative">Mahāprajāpatī Gautamī </term>-->
